More fixing overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,7 @@ input {
 }
 .search-and-select-box .vs__selected {
 	max-width: 0;
+	white-space: nowrap;
 }
 
 .links-list {
